fixed viewbox clipping

--- a/src/components/container.css
+++ b/src/components/container.css
@@ -4,5 +4,7 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
+    display: flex;
+    justify-items: center;
 }
